# YouTubeTranscriptor

./: README.md  pyproject.toml  transcripts.csv  videos.csv
YouTubeTranscriptor_V5/: main.py  split_videos.py  transcribe_videos.py  transcripts.csv  videos.csv
YouTubeTranscriptor_V5/chunks/: videos_0015.csv  videos_0017.csv  videos_0020.csv  videos_0022.csv  videos_0024.csv  videos_0026.csv  videos_0028.csv  videos_0030.csv  videos_0032.csv  videos_0034.csv  videos_0037.csv  videos_0038.csv  videos_0041.csv  videos_0042.csv  videos_0044.csv  videos_0046.csv  videos_0048.csv  videos_0050.csv  videos_0052.csv  videos_0055.csv  videos_0057.csv  videos_0060.csv  videos_0061.csv  videos_0062.csv  videos_0063.csv  videos_0064.csv  videos_0065.csv  videos_0066.csv
YouTubeTranscriptor_V5/chunks/Videos 1 (1-1000)/: videos(1-1000).csv
YouTubeTranscriptor_V5/chunks/Videos 2 (1001-2000)/: videos(1001-2000).csv
YouTubeTranscriptor_V5/chunks/videos 10 (9001-10000)/: videos(9001-10000.csv
YouTubeTranscriptor_V5/chunks/videos 11 (10001-11000)/: transcripts(10001-11000).csv  videos(10001-11000).csv
YouTubeTranscriptor_V5/chunks/videos 12 (11001-12000)/: transcripts(11001-12000).csv  videos(11001-12000.csv
YouTubeTranscriptor_V5/chunks/videos 13 (12001-13000)/: transcripts(12001-13000).csv  videos(12001-13000).csv
YouTubeTranscriptor_V5/chunks/videos 14 (13001-14000)/: transcripts(13001-14000).csv  videos(13001-14000).csv
YouTubeTranscriptor_V5/youtubetranscriptor/: __init__.py  exceptions.py  transcriptor.py
youtubetranscriptor/: transcriptor.py
(+37 files in other folders)
